k8s/order-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-server-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      component: order-server
  template:
    metadata:
      labels:
        component: order-server
    spec:
      containers:
        - name: order-server
          image: kenzoku247/server-order-image:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
