k8s/user-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-server-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      component: user-server
  template:
    metadata:
      labels:
        component: user-server
    spec:
      containers:
        - name: user-server
          image: kenzoku247/server-user-image:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
