k8s/user-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-server-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      component: user-server
  template:
    metadata:
      labels:
        component: user-server
    spec:
      containers:
        - name: user-server
          image: kenzoku247/server-user-image:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
---

apiVersion: v1
kind: Service
metadata:
  name: user-server-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: user-server
  ports:
    - port: 5000
      targetPort: 5000
      name: http
